cmake_minimum_required(VERSION 3.11.3)
add_executable(TetrisTest test.cpp)
add_executable(GameBackgroundTest GameBackgroundTest.cpp)
add_executable(TetrominoTest TetrominoTest.cpp)
target_link_libraries(TetrisTest gtest_main My_Func_Lib)
target_link_libraries(GameBackgroundTest gtest_main GameBackgroundLib)
target_link_libraries(TetrominoTest gmock_main gtest_main TetrominoLib)